-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
6.3.0 Alpha
-
None
-
51ff94ec92 (qt/qtbase/dev) 51ff94ec92 (qt/tqtc-qtbase/dev)
Building examples/widgets/widgets/icons in dev prints a warning:
agent:2022/01/24 09:41:13 build.go:394: /home/qt/work/qt/qtbase/examples/widgets/widgets/icons/iconpreviewarea.cpp: In member function ‘void IconPreviewArea::updatePixmapLabels()’: agent:2022/01/24 09:41:13 build.go:394: /home/qt/work/qt/qtbase/examples/widgets/widgets/icons/iconpreviewarea.cpp:162:66: warning: ‘TestNamespace::QPixmap TestNamespace::QIcon::pixmap(TestNamespace::QWindow*, const TestNamespace::QSize&, TestNamespace::QIcon::Mode, TestNamespace::QIcon::State) const’ is deprecated: Use pixmap(size, devicePixelRatio) instead [-Wdeprecated-declarations] agent:2022/01/24 09:41:13 build.go:394: 162 | IconPreviewArea::iconStates().at(row)); agent:2022/01/24 09:41:13 build.go:394: | ^ agent:2022/01/24 09:41:13 build.go:394: In file included from /home/qt/work/install/include/QtGui/QIcon:1, agent:2022/01/24 09:41:13 build.go:394: from /home/qt/work/qt/qtbase/examples/widgets/widgets/icons/iconpreviewarea.h:54, agent:2022/01/24 09:41:13 build.go:394: from /home/qt/work/qt/qtbase/examples/widgets/widgets/icons/iconpreviewarea.cpp:51: agent:2022/01/24 09:41:13 build.go:394: /home/qt/work/install/include/QtGui/qicon.h:87:13: note: declared here agent:2022/01/24 09:41:13 build.go:394: 87 | QPixmap pixmap(QWindow *window, const QSize &size, Mode mode = Normal, State state = Off) const; agent:2022/01/24 09:41:13 build.go:394: | ^~~~~~